tests/snapshots/integration_tests__parser_ir_fat_arrow_reduce.snap
---
source: tests/integration_tests.rs
expression: format_program_ir(&program)
---
=== Neurons ===

neuron GlobalAvgPool:
  inputs:
    default: [b, c, h, w]
  outputs:
    default: [b, c]
  graph:
    in => @reduce(mean) [b, c]
    @reduce(mean) [b, c] -> out
