tests/snapshots/integration_tests__parser_ir_ffn_stdlib.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron FFN(dim, expansion):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> Linear#0(dim, expansion)
    Linear#0(dim, expansion) -> GELU#1()
    GELU#1() -> Linear#2(expansion, dim)
    Linear#2(expansion, dim) -> out

neuron FFNWithHidden(in_dim, hidden_dim, out_dim):
  inputs:
    default: [*, in_dim]
  outputs:
    default: [*, out_dim]
  graph:
    in -> Linear#3(in_dim, hidden_dim)
    Linear#3(in_dim, hidden_dim) -> GELU#4()
    GELU#4() -> Linear#5(hidden_dim, out_dim)
    Linear#5(hidden_dim, out_dim) -> out
