tests/snapshots/integration_tests__parser_ir_match_basic.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Identity:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,builtin/Identity

neuron Linear(in_dim, out_dim):
  inputs:
    default: [*, in_dim]
  outputs:
    default: [*, out_dim]
  impl:
    Source: core,nn/Linear

neuron MatchWithWildcard:
  inputs:
    default: [*, dim]
  outputs:
    default: [*, 512]
  graph:
    in -> match:
      [*, 512]: Identity#3() -> out
      [*, d]: Linear#4(d, 512) -> out

neuron SimpleMatch:
  inputs:
    default: [*, dim]
  outputs:
    default: [*, 512]
  graph:
    in -> match:
      [*, 512]: Identity#0() -> out
      [*, 256]: Linear#1(256, 512) -> out
      [*, 1024]: Linear#2(1024, 512) -> out
